labs/06-voting-app/worker.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: worker
  namespace: voting-app

spec:
  replicas: 1

  selector:
    matchLabels:
      app: worker

  template:
    metadata:
      labels:
        app: worker

    spec:
      nodeSelector:
        kubernetes.io/arch: arm64

      containers:
        - name: worker
          image: ghcr.io/shellback1998/voting-app-worker:latest

          resources:
            requests:
              memory: "64Mi"
              cpu: "25m"
            limits:
              memory: "128Mi"
              cpu: "200m"
