labs/06-voting-app/postgres.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: db
  namespace: voting-app

spec:
  replicas: 1

  selector:
    matchLabels:
      app: db

  template:
    metadata:
      labels:
        app: db

    spec:
      containers:
        - name: postgres
          image: postgres:18-alpine

          ports:
            - containerPort: 5432

          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql

          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "250m"

      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-pvc

---
apiVersion: v1
kind: Service

metadata:
  name: db
  namespace: voting-app

spec:
  selector:
    app: db

  ports:
    - port: 5432
      targetPort: 5432

  type: ClusterIP
