labs/06-voting-app/result.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: result
  namespace: voting-app

spec:
  replicas: 1

  selector:
    matchLabels:
      app: result

  template:
    metadata:
      labels:
        app: result

    spec:
      nodeSelector:
        kubernetes.io/arch: arm64

      containers:
        - name: result
          image: ghcr.io/shellback1998/voting-app-result:latest

          ports:
            - containerPort: 3000

          resources:
            requests:
              memory: "64Mi"
              cpu: "25m"
            limits:
              memory: "128Mi"
              cpu: "200m"

---
apiVersion: v1
kind: Service

metadata:
  name: result
  namespace: voting-app

spec:
  selector:
    app: result

  ports:
    - port: 3000
      targetPort: 3000

  type: ClusterIP
