labs/06-voting-app/vote.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: vote
  namespace: voting-app

spec:
  replicas: 1

  selector:
    matchLabels:
      app: vote

  template:
    metadata:
      labels:
        app: vote

    spec:
      containers:
        - name: vote
          image: ghcr.io/shellback1998/voting-app-vote:latest

          ports:
            - containerPort: 5000

          resources:
            requests:
              memory: "64Mi"
              cpu: "25m"
            limits:
              memory: "128Mi"
              cpu: "200m"

---
apiVersion: v1
kind: Service

metadata:
  name: vote
  namespace: voting-app

spec:
  selector:
    app: vote

  ports:
    - port: 5000
      targetPort: 5000

  type: ClusterIP
