labs/06-voting-app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: voting-app
  namespace: voting-app

spec:
  ingressClassName: traefik

  rules:
    - host: vote.turing.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vote
                port:
                  number: 5000

    - host: result.turing.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: result
                port:
                  number: 3000
